@@ -1,4 +1,5 @@
 4.5 -> 5.0:
+    - rse: unbreak rpm(1) short-hand option "--force" on package installation
     - rse: use implicit internal library dependencies by default, but allow disabling via --disable-build-intlibdep
     - rse: use implicit external library dependencies by default, but allow disabling via --disable-build-extlibdep
     - rse: remove GNU libtool *.la files during installation only if --disable-build-lafiles is used
